Updated API docs. Full Authorization API documentation functional
