# internal/controller/auth.go
@@ -12,15 +12,15 @@ import (
 )
 
 type AuthPolicyController interface {
-	// Roles
-	FindAllRoles(w http.ResponseWriter, r *http.Request)
-	AssignUserRole(w http.ResponseWriter, r *http.Request)
 	// Policies
 	FindAll(w http.ResponseWriter, r *http.Request)
 	FindByResource(w http.ResponseWriter, r *http.Request)
 	Delete(w http.ResponseWriter, r *http.Request)
 	Create(w http.ResponseWriter, r *http.Request)
 	Update(w http.ResponseWriter, r *http.Request)
+	// Roles
+	FindAllRoles(w http.ResponseWriter, r *http.Request)
+	AssignUserRole(w http.ResponseWriter, r *http.Request)
 	// Inheritance
 	FindAllRoleInheritance(w http.ResponseWriter, r *http.Request)
 	CreateInheritance(w http.ResponseWriter, r *http.Request)
@@ -40,19 +40,40 @@ func NewAuthPolicyController(service service.AuthPolicyService) AuthPolicyContro
 // POLICIES
 //
 
+// @Summary      Finds a list of authorization policies
+// @Description  Accepts search (added as non-case sensitive LIKE) as query parameters and returns matching policies
+// @Tags         Authorization
+// @Accept       json
+// @Produce      json
+// @Param        search   query      string  false  "search (added to all string conditions as LIKE SQL search)"
+// @Success      200 {object} []map[string]interface{}
+// @Failure      400 {string} string "Can't find policies"
+// @Router       /auth [get]
+// @Security BearerToken
 func (c authPolicyController) FindAll(w http.ResponseWriter, r *http.Request) {
 	// Grab search query
-	searchQuery := r.URL.Query().Get("searchQuery")
+	searchQuery := r.URL.Query().Get("search")
 	// Find all
 	policies, err := c.service.FindAll(searchQuery)
 	if err != nil {
 		http.Error(w, "Can't find policies", http.StatusBadRequest)
 		return
 	}
+
 	// Return
 	helpers.WriteAsJSON(w, policies)
 }
 
+// @Summary      Finds a list of authorization policies by resource
+// @Description  Accepts resource as a URL parameter (in slug form: replace all '/' with '-') and returns matching policies associated with resource
+// @Tags         Authorization
+// @Accept       json
+// @Produce      json
+// @Param        policy-slug   path      string  true  "policy-slug"
+// @Success      200 {object} []map[string]interface{}
+// @Failure      400 {string} string "Can't find policies for resource"
+// @Router       /auth/{policy-slug} [get]
+// @Security BearerToken
 func (c authPolicyController) FindByResource(w http.ResponseWriter, r *http.Request) {
 	// Grab search query
 	policyResource := chi.URLParam(r, "policy-slug")
@@ -70,6 +91,16 @@ func (c authPolicyController) FindByResource(w http.ResponseWriter, r *http.Requ
 	helpers.WriteAsJSON(w, policies)
 }
 
+// @Summary      Deletes an authorization policy
+// @Description  Accepts a policy as a JSON body and deletes the policy
+// @Tags         Authorization
+// @Accept       json
+// @Produce      json
+// @Param        policy   body      models.PolicyRule  true  "policy"
+// @Success      200 {string} string "Policy deletion successful!"
+// @Failure      400 {string} string "Can't delete policy"
+// @Router       /auth [delete]
+// @Security BearerToken
 func (c authPolicyController) Delete(w http.ResponseWriter, r *http.Request) {
 	// Grab request body as models.CasbinRule
 	var pol models.PolicyRule
@@ -90,6 +121,16 @@ func (c authPolicyController) Delete(w http.ResponseWriter, r *http.Request) {
 	w.Write([]byte("Policy deletion successful!"))
 }
 
+// @Summary      Creates an authorization policy
+// @Description  Accepts a policy as a JSON body and creates the policy
+// @Tags         Authorization
+// @Accept       json
+// @Produce      json
+// @Param        policy   body      models.PolicyRule  true  "policy"
+// @Success      201 {string} string "Policy creation successful!"
+// @Failure      400 {string} string "Can't create policy"
+// @Router       /auth [post]
+// @Security BearerToken
 func (c authPolicyController) Create(w http.ResponseWriter, r *http.Request) {
 	// Grab request body as models.CasbinRule
 	var pol models.PolicyRule
@@ -123,6 +164,16 @@ func (c authPolicyController) Create(w http.ResponseWriter, r *http.Request) {
 	w.Write([]byte("Policy creation successful!"))
 }
 
+// @Summary      Updates an authorization policy
+// @Description  Accepts a policy as a JSON body and updates the policy
+// @Tags         Authorization
+// @Accept       json
+// @Produce      json
+// @Param        policy   body      models.UpdateCasbinRule  true  "policy"
+// @Success      201 {string} string "Policy update successful!"
+// @Failure      400 {string} string "Can't update policy"
+// @Router       /auth [put]
+// @Security BearerToken
 func (c authPolicyController) Update(w http.ResponseWriter, r *http.Request) {
 	// Grab request body as models.CasbinRule
 	var pol models.UpdateCasbinRule
@@ -157,6 +208,15 @@ func (c authPolicyController) Update(w http.ResponseWriter, r *http.Request) {
 // ROLES
 //
 
+// @Summary      Finds a list of roles
+// @Description  Returns a list of roles
+// @Tags         Authorization
+// @Accept       json
+// @Produce      json
+// @Success      200 {object} []string
+// @Failure      400 {string} string "Can't find roles"
+// @Router       /auth/roles [get]
+// @Security BearerToken
 func (c authPolicyController) FindAllRoles(w http.ResponseWriter, r *http.Request) {
 	// Find all roles
 	roles, err := c.service.FindAllRoles()
@@ -168,6 +228,16 @@ func (c authPolicyController) FindAllRoles(w http.ResponseWriter, r *http.Reques
 	helpers.WriteAsJSON(w, roles)
 }
 
+// @Summary      Assigns a role to a user
+// @Description  Accepts a user_id and role as a JSON body and assigns the role to the user
+// @Tags         Authorization
+// @Accept       json
+// @Produce      json
+// @Param        RoleAssignment   body      models.CasbinRoleAssignment  true  "Role Assignment"
+// @Success      200 {string} string "User assigned role successfully!"
+// @Failure      400 {string} string "Can't assign user"
+// @Router       /auth/roles [put]
+// @Security BearerToken
 func (c authPolicyController) AssignUserRole(w http.ResponseWriter, r *http.Request) {
 	// Grab request body as models.CasbinRule
 	var pol models.CasbinRoleAssignment
@@ -207,6 +277,15 @@ func (c authPolicyController) AssignUserRole(w http.ResponseWriter, r *http.Requ
 // INHERITANCE
 //
 
+// @Summary      Finds a list of role inheritance
+// @Description  Returns a list of role inheritance policies
+// @Tags         Authorization
+// @Accept       json
+// @Produce      json
+// @Success      200 {object} []map[string]string
+// @Failure      400 {string} string "Can't find roles"
+// @Router       /auth/inheritance [get]
+// @Security BearerToken
 func (c authPolicyController) FindAllRoleInheritance(w http.ResponseWriter, r *http.Request) {
 	// Find all roles
 	roles, err := c.service.FindAllRoleInheritance()
@@ -218,6 +297,16 @@ func (c authPolicyController) FindAllRoleInheritance(w http.ResponseWriter, r *h
 	helpers.WriteAsJSON(w, roles)
 }
 
+// @Summary      Creates a role inheritance
+// @Description  Accepts a role inheritance as a JSON body and creates the role inheritance
+// @Tags         Authorization
+// @Accept       json
+// @Produce      json
+// @Param        inheritance   body      models.G2Record  true  "Inheritance Record"
+// @Success      201 {string} string "Inheritance creation successful!"
+// @Failure      400 {string} string "Can't create inheritance"
+// @Router       /auth/inheritance [post]
+// @Security BearerToken
 func (c authPolicyController) CreateInheritance(w http.ResponseWriter, r *http.Request) {
 	// Grab request body as models.CasbinRule
 	var pol models.G2Record
@@ -250,6 +339,16 @@ func (c authPolicyController) CreateInheritance(w http.ResponseWriter, r *http.R
 	w.Write([]byte("Inheritance creation successful!"))
 }
 
+// @Summary      Deletes a role inheritance
+// @Description  Accepts a role inheritance as a JSON body and deletes the role inheritance
+// @Tags         Authorization
+// @Accept       json
+// @Produce      json
+// @Param        inheritance   body      models.G2Record  true  "Inheritance Record"
+// @Success      200 {string} string "Inheritance deletion successful!"
+// @Failure      400 {string} string "Can't delete inheritance"
+// @Router       /auth/inheritance [delete]
+// @Security BearerToken
 func (c authPolicyController) DeleteInheritance(w http.ResponseWriter, r *http.Request) {
 	// Grab request body as models.CasbinRule
 	var pol models.G2Record
